Fixes after neuro review